# backend/src/app.module.ts
@@ -1,5 +1,7 @@
 import { Module } from '@nestjs/common';
 import { ConfigModule } from './shared/config/config.module';
+import { LoggerModule } from './shared/observability/logger.module';
+import { MetricsModule } from './shared/observability/metrics.module';
 import { MapasModule } from './modules/mapas/mapas.module';
 import { UbicacionModule } from './modules/ubicacion/ubicacion.module';
 import { AuthModule } from './modules/auth/auth.module';
@@ -7,7 +9,15 @@ import { PoisModule } from './modules/pois/pois.module';
 import { HealthController } from './health.controller';
 
 @Module({
-  imports: [ConfigModule, MapasModule, UbicacionModule, AuthModule, PoisModule],
+  imports: [
+    ConfigModule,
+    LoggerModule,
+    MetricsModule,
+    MapasModule,
+    UbicacionModule,
+    AuthModule,
+    PoisModule,
+  ],
   controllers: [HealthController],
   providers: [],
 })
